--- a/InteliContent M1 main Semana_07-Exercicios/resposta7.html
+++ b/InteliContent M1 main Semana_07-Exercicios/resposta7.html
@@ -9,6 +9,17 @@
     <script>
         var idade = 0;
         idade = prompt("Insira sua idade: ");
+        if (idade < 16) {
+            console.log("Não pode votar!");
+        }
+        else {
+            if (idade >= 16 && idade < 18) {
+                console.log("Voto facultativo");
+            }
+            else {
+                console.log("Voto obrigatório")
+            }
+        }
     </script>
 </body>
 </html>
